--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p><label for="iestado">Estado: </label>
                         <input type="text" name="estado" id="iestado" required> </p>
                         
-                        <p><label for="imensagem">Mensagem: </label><Textarea name="mensagem" id="imensagem"></Textarea></p>
+                        <p><label for="imensagem">Mensagem: </label><Textarea name="mensagem" id="imensagem" required></Textarea></p>
 
                     <p>
                         <label for="ienviar"></label>
